kustomize/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haidbrx
spec:
  selector:
    matchLabels:
      app: haidbrx
  replicas: 3
  template:
    metadata:
      labels:
        app: haidbrx
    spec:
      containers:
        - name: haidbrx
          image: haigpt.azurecr.io/haidbrx:latest
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: config-volume
          configMap:
            name: haidbrx
            items:
              - key: config.json
                path: config.json
