kustomize/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haidbrx
  labels:
    app: haidbrx
spec:
  type: ClusterIP
  selector:
    app: haidbrx
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
